tests/baselines/reference/computedPropertyNames32_ES5.errors.txt
tests/cases/conformance/es6/computedProperties/computedPropertyNames32_ES5.ts(6,5): error TS1167: Computed property names are only available when targeting ECMAScript 6 and higher.
tests/cases/conformance/es6/computedProperties/computedPropertyNames32_ES5.ts(6,10): error TS2466: A computed property name cannot reference a type parameter from its containing type.


==== tests/cases/conformance/es6/computedProperties/computedPropertyNames32_ES5.ts (2 errors) ====
    function foo<T>() { return '' }
    class C<T> {
        bar() {
            return 0;
        }
        [foo<T>()]() { }
        ~~~~~~~~~~
!!! error TS1167: Computed property names are only available when targeting ECMAScript 6 and higher.
             ~
!!! error TS2466: A computed property name cannot reference a type parameter from its containing type.
    }